MDEV-29187: Deadlock output in InnoDB status always shows transaction (0)

At some point the incrementing of the transaction counter got dropped.

Thanks Agustin for the bug report.